--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,19 @@ repositories {
     jcenter()
 }
 
-repositories {
-    maven {
-        url 'https://maven.aliyun.com/repository/central'
-    }
-    jcenter()
+dependencies {
+    // This dependency is exported to consumers, that is to say found on their compile classpath.
+    api 'org.apache.commons:commons-math3:3.6.1'
+
+    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+    implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'com.google.inject:guice:4.2.3'
+
+    // Use JUnit test framework
+    testImplementation 'junit:junit:4.13'
+
+    testImplementation 'org.assertj:assertj-core:3.9.1'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
 }
 
 jacocoTestReport {
